fixed footer links gap

--- a/public/footer.css
+++ b/public/footer.css
@@ -34,7 +34,9 @@ i {
         align-items: center;
         position: relative;
         bottom: 0;
-        gap: 2.5rem;
         height: 25vh;
+    }
+    .footer-links ul {
+        gap: 2.5rem;
     }
 }
